--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.changing-text {
+  @apply text-primary;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.changing-text::after {
+  content: "Discover";
+  animation: change 6s linear infinite alternate;
+}
+
+@keyframes change {
+  0% {
+    content: "Discover";
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  33% {
+    content: "Share";
+  }
+
+  66% {
+    content: "Create";
+  }
 }
