--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,19 @@
     content: "Create";
   }
 }
+
+.fade-in {
+  animation: fadeInScale 0.4s ease-in-out forwards;
+}
+
+@keyframes fadeInScale {
+  0% {
+    opacity: 0;
+    scale: 0.95;
+  }
+
+  100% {
+    opacity: 1;
+    scale: 1;
+  }
+}
